Adapt to Java 21 changes